change of color of buttons
change of color of buttons

--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
         data.addColumn('string', 'ToolTip');
         // For each orgchart box, provide the name, manager, and tooltip to show.
         data.addRows([
-          [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div style="color:red; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:Red";>Jejiya,Jeji</button></div>'},
+          [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div style="color:green; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:green";>Jejiya,Jeji</button></div>'},
            '', 'The President'],
-          [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:red; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:Red";>Pedanana,Pedamma</button></div>'},
+          [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:green; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:green";>Pedanana,Pedamma</button></div>'},
            'Tirupathaiyya,Chennamma', 'Pedanana,Pedamma'],
-		  [{v:'Lakshmi Narayana,Venkata Narayanamma', f:'Lakshmi Narayana,Venkata Narayanamma<div style="color:red; font-style:italic"><button onclick="DaddyMummy()" type="button" style="color:Red";>Daddy,Mummy</button></div>'},
+		  [{v:'Lakshmi Narayana,Venkata Narayanamma', f:'Lakshmi Narayana,Venkata Narayanamma<div style="color:green; font-style:italic"><button onclick="DaddyMummy()" type="button" style="color:green";>Daddy,Mummy</button></div>'},
            'Tirupathaiyya,Chennamma', 'Daddy,Mummy'],
-		  [{v:'Venkateswarlu,Indiramma', f:'Venkateswarlu,Indiramma<div style="color:red; font-style:italic"><button onclick="NLRbabaipinni()" type="button" style="color:Red";>NLR Babai,Indira Pinni</button></div>'},
+		  [{v:'Venkateswarlu,Indiramma', f:'Venkateswarlu,Indiramma<div style="color:green; font-style:italic"><button onclick="NLRbabaipinni()" type="button" style="color:green";>NLR Babai,Indira Pinni</button></div>'},
            'Tirupathaiyya,Chennamma', 'NLR babai,,Indira Pinni'],
-		  [{v:'Rajendra,Satyavathi', f:'Rajendra,Satyavathi<div style="color:red; font-style:italic"><button onclick="Rajababaipinni()" type="button" style="color:Red";>Raja Babai,Satyavathi Pinni</button></div>'},
+		  [{v:'Rajendra,Satyavathi', f:'Rajendra,Satyavathi<div style="color:green; font-style:italic"><button onclick="Rajababaipinni()" type="button" style="color:green";>Raja Babai,Satyavathi Pinni</button></div>'},
            'Tirupathaiyya,Chennamma', 'Raja Babai,Satyavathi Pinni'],
 		   
-		  [{v:'Venu Gopal,Manoji', f:'Venu,Manoji<div style="color:red; font-style:italic"><button onclick="VenuAnnaVadina()" type="button" style="color:Red";>Venu Anna,Vadina</button></div>'},
+		  [{v:'Venu Gopal,Manoji', f:'Venu,Manoji<div style="color:green; font-style:italic"><button onclick="VenuAnnaVadina()" type="button" style="color:green";>Venu Anna,Vadina</button></div>'},
            'Prasad,Chennamma', 'Venu Annaya,Vadina'],
-		  [{v:'Narayanamma,China Narayana', f:'Narayanamma,China Narayana<div style="color:red; font-style:italic"><button onclick="Narayana()" type="button" style="color:Red";>Narayanakka,Narayana Mavayya</button></div>'},
+		  [{v:'Narayanamma,China Narayana', f:'Narayanamma,China Narayana<div style="color:green; font-style:italic"><button onclick="Narayana()" type="button" style="color:green";>Narayanakka,Narayana Mavayya</button></div>'},
            'Prasad,Chennamma', 'Narayanakka,Mavayya'],
-		  [{v:'Padma,Naveen', f:'Padma,Naveen<div style="color:red; font-style:italic"><button onclick="PadmaNaveen()" type="button" style="color:Red";>Padmakka,Naveen Bava</button></div>'},
+		  [{v:'Padma,Naveen', f:'Padma,Naveen<div style="color:green; font-style:italic"><button onclick="PadmaNaveen()" type="button" style="color:green";>Padmakka,Naveen Bava</button></div>'},
            'Prasad,Chennamma', 'Padmakka,Naveen Bava'],
-		  [{v:'Mohan', f:'Mohan<div style="color:red; font-style:italic"><button onclick="Mohan()" type="button" style="color:Red";>Chinnodu</button></div>'},
+		  [{v:'Mohan', f:'Mohan<div style="color:green; font-style:italic"><button onclick="Mohan()" type="button" style="color:green";>Chinnodu</button></div>'},
            'Prasad,Chennamma', 'Chinnodu'],
-		  [{v:'Sai Kumar', f:'Sai Kumar<div style="color:red; font-style:italic"><button onclick="Me()" type="button" style="color:Red";>Me</button></div>'},
+		  [{v:'Sai Kumar', f:'Sai Kumar<div style="color:green; font-style:italic"><button onclick="Me()" type="button" style="color:green";>Me</button></div>'},
            'Lakshmi Narayana,Venkata Narayanamma', 'Me'],
-		  [{v:'Jyothsna,Mahesh', f:'Jyothsna,Mahesh<div style="color:red; font-style:italic"><button onclick="BujjiNani()" type="button" style="color:Red";>Bujji,Nani</button></div>'},
+		  [{v:'Jyothsna,Mahesh', f:'Jyothsna,Mahesh<div style="color:green; font-style:italic"><button onclick="BujjiNani()" type="button" style="color:green";>Bujji,Nani</button></div>'},
            'Lakshmi Narayana,Venkata Narayanamma', 'Bujji,Nani'],
-		  [{v:'Pavan Kumar,Prasanna', f:'Pavan Kumar,Prasanna<div style="color:red; font-style:italic"><button onclick="PavanPrasanna()" type="button" style="color:Red";>Pavan Anna,Prasanna Vadina</button></div>'},
+		  [{v:'Pavan Kumar,Prasanna', f:'Pavan Kumar,Prasanna<div style="color:green; font-style:italic"><button onclick="PavanPrasanna()" type="button" style="color:green";>Pavan Anna,Prasanna Vadina</button></div>'},
            'Venkateswarlu,Indiramma', 'Pavan Anna,Vadina'],
-		  [{v:'Varun', f:'Varun<div style="color:red; font-style:italic"><button onclick="Varun()" type="button" style="color:Red";>Varun Anna</button></div>'},
+		  [{v:'Varun', f:'Varun<div style="color:green; font-style:italic"><button onclick="Varun()" type="button" style="color:green";>Varun Anna</button></div>'},
            'Venkateswarlu,Indiramma', 'Varun Anna'],
-		  [{v:'Prasanna', f:'Prasanna<div style="color:red; font-style:italic"><button onclick="Prasanna()" type="button" style="color:Red";>Prasanna</button></div>'},
+		  [{v:'Prasanna', f:'Prasanna<div style="color:green; font-style:italic"><button onclick="Prasanna()" type="button" style="color:green";>Prasanna</button></div>'},
            'Rajendra,Satyavathi', 'Prasanna'],
-		  [{v:'Gowtham', f:'Gowtham<div style="color:red; font-style:italic"><button onclick="Gowtham()" type="button" style="color:Red";>Gowtham</button></div>'},
+		  [{v:'Gowtham', f:'Gowtham<div style="color:green; font-style:italic"><button onclick="Gowtham()" type="button" style="color:green";>Gowtham</button></div>'},
            'Rajendra,Satyavathi', 'Gowtham'],
         ]);
         // Create the chart.
@@ -75,7 +75,7 @@
 		document.getElementById("demo1").innerHTML = "Indira Pinni:: When a situation arises, it’s easy to make her panic/worry/tense. Poor Pinni, always there is a health issue for her. Prays a lot to god. In fact, her praying is equal to all of us praying. Always ready to go to temple distance doesn’t matters. Struggled a lot with Babai and always there for him when a supporting hand needed.";
 		}
 		function Rajababaipinni() {
-		document.getElementById("demo").innerHTML = "Raja Babai:: Babai is the youngest of four brothers. Babai is the second most feared person after my Daddy. He grew up by taking all the guidance, suggestions from his elder brothers. I saw a great leader and manager in him. Saw lot of those situations where he managed/handled them quite well. He is the quickest of all to react to a situation. Good with humor bad with temper. Praising is his repertoire.";
+		document.getElementById("demo").innerHTML = "Raja Babai:: Babai is the youngest of four brothers. Babai is the second most feagreen person after my Daddy. He grew up by taking all the guidance, suggestions from his elder brothers. I saw a great leader and manager in him. Saw lot of those situations where he managed/handled them quite well. He is the quickest of all to react to a situation. Good with humor bad with temper. Praising is his repertoire.";
 		document.getElementById("demo1").innerHTML = "Satyavathi Pinni:: She is a capable person in handling the situations and family simultaneously. She finds herself more effective in agriculture. Best female in the house in terms of agriculture work. Always like to know the trend of a market and keeps up to date. Likes to do shopping often.";
 		}
 		function VenuAnnaVadina() {
