add tier 3 of babais
add tier 3 of babais

--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
 		document.getElementById("demo1").innerHTML = "Nani:: He is 100% supportive to Bujji. Knows many things and talks about them given a chance. Have enough patience to explain things to Bujji.";
 		}
 		function PavanPrasanna() {
-		document.getElementById("demo").innerHTML = "WIP: 2 Paras should come about PavanAnna and PrasannaVadina";
-		document.getElementById("demo1").innerHTML = "WIP: 2 Paras should come about PavanAnna and PrasannaVadina";
+		document.getElementById("demo").innerHTML = "Pavan Anna:: If you may ask whether NLR Babai is perfect. I can’t say neither yes nor no. But that is not the case with Pavan annaya. He is the keenest observer in the family. He is a person with a very long vision, planning and coolness. He is so close to his parents that each and every important decision in his life is not taken without consulting them.";
+		document.getElementById("demo1").innerHTML = "Prasanna Vadina:: Soo sorry Vadina, I don’t know much about you. I can’t write off without knowing much. Except the fact that you are very good at studies always first in the class I reckon.";
 		}
 		function Varun() {
-		document.getElementById("demo").innerHTML = "WIP: 1 Para should come about Varun Anna";
+		document.getElementById("demo").innerHTML = "Varun Anna:: He is not a brother or a cousin to me. He is a good friend of mine. Belongs to same age group that brought us together as friends I guess. He is bad with programming but good with humor. It’s hard to say whether he is friend and good to a person or not. Mastered in controlling temper. If one can desire for a friend, that is Varun Anna.";
 		document.getElementById("demo1").innerHTML = "";
 		}
 		function Prasanna() {
-		document.getElementById("demo").innerHTML = "WIP: 1 Para should come about Prasanna";
+		document.getElementById("demo").innerHTML = "Prasanna:: A young blood rising very fast to face the challenges. She is promising a very bright and prominent future. Would like to see her in a good position leading a family successfully and holding a good position in job life.";
 		document.getElementById("demo1").innerHTML = "";
 		}
 		function Gowtham() {
-		document.getElementById("demo").innerHTML = "WIP: 1 Para should come about Gowtham";
+		document.getElementById("demo").innerHTML = "Gowtham:: Aaaah, here is the pocket dynamite. A young ravishing blood. He will grow strong in academics. Would love to see him successful in various activities like sports apart from academics.";
 		document.getElementById("demo1").innerHTML = "";
 		}
    </script>
