Change of headings
Change of headings

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
     <section class="main-content">
       <h1>
-      <a id="will-discuss-about-my-family-here" class="anchor" href="#will-discuss-about-my-family-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Will discuss about my family here</h1>
+      <a id="will-discuss-about-my-family-here" class="anchor" href="#will-discuss-about-my-family-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>An attempt to show insight of my family</h1>
        
-       <p>Will explain each and every one in my family.Their personality traits.What they mean to me..To know more click on the buttons below.</p>
+       <p>Took a step to dive into the family and their individual traits.What they mean to me.To know more click on the buttons below.......</p>
        </section>
        <div id='chart_div'></div>
 	<section class="main-content">
@@ -139,7 +139,7 @@
 		<p id='demo1'></p>
 	  </section>
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/abdv17/Wish.github.io">Gaddam&#39;s Family</a> is maintained by <a href="https://github.com/abdv17">abdv17</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/abdv17/Wish.github.io">Gaddam&#39;s Family</a> is maintained by <a href="https://github.com/abdv17">Sai Gaddam</a>.</span>
         
       </footer>
 
