change of footer class
change of footer class

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 		<p id='demo'></p>
 		<p id='demo1'></p>
 	  </section>
-      <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/abdv17/Wish.github.io">Gaddam&#39;s Family</a> is maintained by <a href="https://github.com/abdv17">Sai Gaddam</a>.</span>
+      <footer class="main-content">
+        <span class="main-content"><a href="https://github.com/abdv17/Wish.github.io">Gaddam&#39;s Family</a> is maintained by <a href="https://github.com/abdv17">Sai Gaddam</a>.</span>
         
       </footer>
 
