add class to tier1
add class to tier1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         data.addColumn('string', 'ToolTip');
         // For each orgchart box, provide the name, manager, and tooltip to show.
         data.addRows([
-          [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div style="color:green; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:green";>Jejiya,Jeji</button></div>'},
+          [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div class="tier1" style="color:green; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:green";>Jejiya,Jeji</button></div>'},
            '', 'The President'],
           [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:green; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:green";>Pedanana,Pedamma</button></div>'},
            'Tirupathaiyya,Chennamma', 'Pedanana,Pedamma'],
