--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         data.addRows([
           [{v:'Tirupathaiyya,Chennamma', f:'Tirupathaiyya,Chennamma<div class="tier1" style="color:green; font-style:italic"><button onclick="JejiyaJeji()" type="button" style="color:green";>Jejiya,Jeji</button></div>'},
            '', 'The President'],
-          [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div style="color:green; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:green";>Pedanana,Pedamma</button></div>'},
+          [{v:'Prasad,Chennamma', f:'Prasad,Chennamma<div class="tier2" style="color:green; font-style:italic"><button onclick="PedananaPedamma()" type="button" style="color:green";>Pedanana,Pedamma</button></div>'},
            'Tirupathaiyya,Chennamma', 'Pedanana,Pedamma'],
 		  [{v:'Lakshmi Narayana,Venkata Narayanamma', f:'Lakshmi Narayana,Venkata Narayanamma<div style="color:green; font-style:italic"><button onclick="DaddyMummy()" type="button" style="color:green";>Daddy,Mummy</button></div>'},
            'Tirupathaiyya,Chennamma', 'Daddy,Mummy'],
