--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
            'Prasad,Chennamma', 'Padmakka,Naveen Bava'],
 		  [{v:'Mohan', f:'Mohan<div style="color:green; font-style:italic"><button onclick="Mohan()" type="button" style="color:green";>Chinnodu</button></div>'},
            'Prasad,Chennamma', 'Chinnodu'],
+		
 		  [{v:'Sai Kumar', f:'Sai Kumar<div style="color:green; font-style:italic"><button onclick="Me()" type="button" style="color:green";>Me</button></div>'},
            'Lakshmi Narayana,Venkata Narayanamma', 'Me'],
 		  [{v:'Jyothsna,Mahesh', f:'Jyothsna,Mahesh<div style="color:green; font-style:italic"><button onclick="BujjiNani()" type="button" style="color:green";>Bujji,Nani</button></div>'},
            'Lakshmi Narayana,Venkata Narayanamma', 'Bujji,Nani'],
+		  [{v:'Paapayi', f:'Paapayi<div style="color:green; font-style:italic"><button onclick="Paapayi()" type="button" style="color:green";>Paapayi</button></div>'},
+           'Jyothsna,Mahesh', 'Bujji,Nani'],
 		  [{v:'Pavan Kumar,Prasanna', f:'Pavan Kumar,Prasanna<div style="color:green; font-style:italic"><button onclick="PavanPrasanna()" type="button" style="color:green";>Pavan Anna,Prasanna Vadina</button></div>'},
            'Venkateswarlu,Indiramma', 'Pavan Anna,Vadina'],
 		  [{v:'Varun', f:'Varun<div style="color:green; font-style:italic"><button onclick="Varun()" type="button" style="color:green";>Varun Anna</button></div>'},
            'Venkateswarlu,Indiramma', 'Varun Anna'],
+		
 		  [{v:'Prasanna', f:'Prasanna<div style="color:green; font-style:italic"><button onclick="Prasanna()" type="button" style="color:green";>Prasanna</button></div>'},
            'Rajendra,Satyavathi', 'Prasanna'],
 		  [{v:'Gowtham', f:'Gowtham<div style="color:green; font-style:italic"><button onclick="Gowtham()" type="button" style="color:green";>Gowtham</button></div>'},
@@ -103,6 +107,10 @@
 		function BujjiNani() {
 		document.getElementById("demo").innerHTML = "Bujji:: She never resists herself in asking something to her mom n dad. She is under an impression under a feeling like I am good person all around me are good persons. She cant catch a point at first attempt, slow at doing things. Despite slow, will complete all the household activities with precision. Won’t involve in debates at all.";
 		document.getElementById("demo1").innerHTML = "Nani:: He is 100% supportive to Bujji. Knows many things and talks about them given a chance. Have enough patience to explain things to Bujji.";
+		}
+	    	function Paapayi() {
+		document.getElementById("demo").innerHTML = "Paapayi:: Born on Jan 22 of 2016. I would like to name her 'Naandi' a beginning of new generation. After many long years she answered many with her birth. She bought a new joy and new level of designations and responsibilities in our family. Looking forward to see you kodal pilla.";
+		document.getElementById("demo1").innerHTML = "";
 		}
 		function PavanPrasanna() {
 		document.getElementById("demo").innerHTML = "Pavan Anna:: If you may ask whether NLR Babai is perfect. I can’t say neither yes nor no. But that is not the case with Pavan annaya. He is the keenest observer in the family. He is a person with a very long vision, planning and coolness. He is so close to his parents that each and every important decision in his life is not taken without consulting them.";
