--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		document.getElementById("demo1").innerHTML = "Nani:: He is 100% supportive to Bujji. Knows many things and talks about them given a chance. Have enough patience to explain things to Bujji.";
 		}
 	    	function Paapayi() {
-		document.getElementById("demo").innerHTML = "Paapayi:: Born on Jan 22 of 2016. I would like to name her 'Naandi' a beginning of new generation. After many long years she answered many with her birth. She bought a new joy and new level of designations and responsibilities in our family. Looking forward to see you kodal pilla.";
+		document.getElementById("demo").innerHTML = "Paapayi:: Born on Jan 22 of 2017. I would like to name her 'Naandi' a beginning of new generation. After many long years she answered many with her birth. She bought a new joy and new level of designations and responsibilities in our family. Would like to nick name you as 'China Bujji' Daughter of Bujji.";
 		document.getElementById("demo1").innerHTML = "";
 		}
 		function PavanPrasanna() {
